Refactor cross-platform path handling, modernize Lucene stemmer, and fix Mockito test assertions